2007-06-22  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Removed code duplication.

2007-06-22  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Use the new CloseClicked
	  event of TabLabel. Fixes bug #81890.

2007-06-22  Mike Krüger <mkrueger@novell.com> 

	Added MIT license to standard headers.

2007-06-20  Michael Hutchinson  <m.j.hutchinson@gmail.com>

	* MonoDevelop.Ide.StandardHeader/NewHeaderTemplateDialog.cs,
	  MonoDevelop.Ide.StandardHeader/StandardHeaderPanel.cs: Work around 
	  compiler bug(?) in Mono 1.2.4 where anonymous delegate scopes don't 
	  respect 'using' statements. Use explicit namespaces to avoid this.

2007-06-20  Mike Krüger <mkrueger@novell.com> 

	Worked on the standard header feature.

2007-06-19 Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* templates/EmptyEnum.xft.xml,
	  templates/EmptyStruct.xft.xml: Fixed typos.

2007-06-19 Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* Base.glade: Fixed casing of label text.

2007-06-18 Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* MonoDevelop.Ide.Gui.Pads/FileScout.cs: Use the configured
	default new project path as startup path. Fixes bug #79393.

2007-06-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Implemented maximize
	  editing area when double clicking on a tab. 
	
	  Described in http://bugzilla.ximian.com/show_bug.cgi?id=81349.

2007-06-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs: Reduce spacing between rows.
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs: Subscribing the EndBuild
	  event in ErrorListPad to show the error list after building doesn't
	  work anymore since pads are lazily loaded now.
	* gtk-gui/generated.cs: Made IconLoader internal.
	* gtk-gui/objects.xml: Updated.

2007-06-11  Lluis Sanchez Gual <lluis@novell.com> 
